# skillforge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Justfile  README.md  alembic.ini  compose.yml  dockerfile  justfile  openapi.json  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  release.yml  version-bump.yml
app/: main.py
app/api/: __init__.py
app/api/system/: __init__.py  health.py
app/api/v1/: auth.py  router.py
app/api/v1/auth/: __init__.py  clients.py  schemas.py  token.py
app/api/v1/bot/: __init__.py  _transitions.py  authz.py  command_envs.py  dependencies.py  jobs.py  operations.py  runtime.py  schemas.py  students.py  tutors.py  users.py
app/api/v1/common/: __init__.py  responses.py
app/cli/: deadletters.py
app/core/: config.py
app/core/auth/: __init__.py  audit.py  bootstrap.py  config.py  dependencies.py  principal.py  results.py  schemas.py  scopes.py  secrets.py  security.py  service.py  tokens.py
app/core/auth/services/: __init__.py  bootstrap.py  clients.py  errors.py  scopes.py  secrets.py  tokens.py
app/core/db/: __init__.py  config.py  database.py  dependencies.py
app/core/db/models/: __init__.py  base.py  schemata.py  shared.py
app/core/db/models/auth/: __init__.py  application_client.py  application_client_scope_grant.py  application_client_secret.py  auth_audit_log.py  base.py  permission_scope.py
app/core/db/models/bot/: __init__.py  app_command_audit_log.py  archive_category.py  base.py  command_env_channel.py  discord_channel.py  discord_guild.py  discord_role_binding.py  discord_user.py  discord_user_permission_group.py  job.py  operation.py  permission_grant.py  permission_group.py  student_workspace.py  tutor_workspace.py
app/core/db/models/core/: base.py  (+11 more)
app/core/logging/: __init__.py  config.py  logging.py  middleware.py
app/services/bot/: __init__.py  authz.py  command_envs.py  contexts.py  errors.py  jobs.py  operations.py  principals.py  profile.py  provisioning.py  reaper.py  transitions.py  views.py
app/services/system/: __init__.py  health_service.py  heartbeat_service.py  schemas.py
app/workers/: reaper.py
docs/: ARCHITECTURE.md  AUTHENTICATION.md  AUTHENTICATION_IMPLEMENTATION.md  DATABASE_SCHEMA.md  DATABASE_SCHEMA_V2.md
docs/decisions/: 0001-openapi-as-contract.md  0002-pooled-vs-migration-url.md  0003-two-phase-transitions.md  0004-forge-first-job-queue.md  0005-multi-schema-db.md  README.md
docs/specs/: batch-lookups.md  lifecycle-guardian.md  off-boarding-transitions.md  operation-cancel.md  ops-read-plane.md  principals-and-provisioning.md
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_discord_id_bigint.py  0003_job.py  0004_discord_account_flags.py  0005_operation.py  0006_worker_heartbeat.py  0007_off_boarding_transitions.py  0008_idempotent_prepare.py  0009_cancel_operation.py
scripts/: check_docs.py  coverage_summary.py  create-release.sh  deploy-webhook.sh  docker-image.sh  dump_openapi.py  release-check.sh  release-target.sh  version.py
skillforge/: main.py
tests/: conftest.py  test_logging.py  test_migrations.py
tests/api/: test_auth_endpoint.py  test_bot_authz_endpoint.py  test_bot_command_envs_endpoint.py  test_bot_jobs_endpoint.py  test_bot_operations_endpoint.py  test_bot_runtime_endpoint.py  test_bot_transitions_endpoint.py  test_bot_users_endpoint.py  test_db_lifespan.py  test_health.py
tests/auth/: test_dependencies.py  test_secrets.py  test_tokens.py
tests/db/: conftest.py  test_auth_service.py  test_base.py  test_bot_authz_service.py  test_bot_deadletters_service.py  test_bot_jobs_service.py  test_bot_operations_service.py  test_bot_provisioning_service.py  test_bot_reaper_service.py  test_bot_service.py  test_bot_transitions_service.py  test_migration_apply.py  test_worker_heartbeat_service.py
tests/db/models/: test_auth_models.py  test_bot_models.py  test_core_models.py  test_ext_models.py  test_schemata.py  test_system_models.py
tests/workers/: test_reaper_cycle.py
(+14 files in other folders)
