[project]
name = "skillforge"
version = "0.1.1"
description = "Backend of the skill-platform."
authors = [{ name = "Leon Weimann", email = "coding@leonweimann.de" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.13.0",
    "skillcore>=0.2.0",
    "sqlalchemy[asyncio]>=2.0.49",
]

[project.urls]
Repository = "https://github.com/Nachhilfe-Leon-Weimann/skillforge"
Issues     = "https://github.com/Nachhilfe-Leon-Weimann/skillforge/issues"

[tool.uv.sources]
skillcore = { git = "https://github.com/Nachhilfe-Leon-Weimann/skillcore.git", tag = "v0.2.0" }

[dependency-groups]
dev = [{ include-group = "tests" }, "ruff>=0.15.14"]
tests = [
    "ty>=0.0.39",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "testcontainers>=4.14.2",
]

[tool.ruff]
line-length = 120
preview     = true

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP"]

ignore = [
    # "E501", # line length
]

fixable = ["ALL"]

unfixable = [
    "F401", # unused imports
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-q -rs"
asyncio_mode = "auto"
pythonpath   = ["."]

markers = ["db: tests that require a database connection"]

[tool.ty.terminal]
error-on-warning = true
