[project]
name = "skillforge"
version = "0.1.0"
description = "Backend of the skill-platform."
authors = [{ name = "Leon Weimann", email = "coding@leonweimann.de" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.138.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "skillcore>=0.2.0",
    "sqlalchemy[asyncio]>=2.0.51",
]

[project.urls]
Repository = "https://github.com/Nachhilfe-Leon-Weimann/skillforge"
Issues     = "https://github.com/Nachhilfe-Leon-Weimann/skillforge/issues"

[tool.uv.sources]
skillcore = { git = "https://github.com/Nachhilfe-Leon-Weimann/skillcore.git", tag = "v0.2.0" }

[dependency-groups]
dev = [{ include-group = "tests" }, "ruff>=0.15.20"]
tests = [
    "ty>=0.0.55",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "testcontainers>=4.14.2",
]

[tool.ruff]
line-length = 120
preview     = true

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP"]

ignore = [
    # "E501", # line length
]

fixable = ["ALL"]

unfixable = [
    "F401", # unused imports
]

[tool.ruff.lint.per-file-ignores]
# Alembic version scripts are generated DDL; long constraint/index lines are unavoidable.
"migrations/versions/*" = ["E501"]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-q -rs"
asyncio_mode = "auto"
pythonpath   = ["."]

markers = ["db: tests that require a database connection"]

[tool.ty.terminal]
error-on-warning = true
